# bike-shoppping

./: .env.example  Cargo.toml  README.md  package.json  start.md
backend/: .env.example  .gitignore  Cargo.toml  docker-compose.yml
backend/bindings/: Product.ts
backend/src/: api_docs.rs  lib.rs  main.rs
backend/src/config/: mod.rs
backend/src/controllers/: auth_controller.rs  mod.rs  order_controller.rs  product_controller.rs  user_controller.rs
backend/src/db/: mongo.rs  redis.rs
backend/src/dto/: auth.rs  order.rs  product.rs  user.rs
backend/src/errors/: auth_error.rs  db_error.rs  hash_error.rs  jwt_error.rs  mod.rs
backend/src/middleware/: auth.rs  permissions.rs
backend/src/models/: app.rs  mod.rs  order.rs  product.rs  res.rs  role.rs  user.rs
backend/src/routes/: auth.rs  mod.rs  order.rs  product.rs  user.rs
backend/src/services/: auth_service.rs  mod.rs  order_service.rs  product_service.rs  user_service.rs
backend/src/utils/: hash.rs  jwt.rs  mod.rs
backend/tests/: auth_test.rs  user_test.rs
backend/tests/common/: mod.rs
bindings/: Category.ts  CreateOrderDto.ts  Order.ts  Product.ts  UpdateOrderDto.ts  UpdateProductDto.ts
db_types/: AuthResponse.d.ts  Cargo.toml  CreateProductDto.d.ts  ErrorResponse.d.ts  LoginDto.d.ts  Order.d.ts  RefreshTokenResponse.d.ts  RegisterDto.d.ts  UpdateUserDto.d.ts  UserInfo.d.ts
frontend/: .gitignore  README.md  app.json  package-lock.json  package.json  tsconfig.json
frontend/app/: _layout.tsx  documentation.tsx  index.tsx  map.tsx  product.tsx  shop.tsx  user.tsx
frontend/app/(tabs)/: _layout.tsx  documentation.tsx  index.tsx  map.tsx  shop.tsx  user.tsx
frontend/app/components/: Navigation.tsx  SpecialIconGradient.tsx
frontend/app/components/DocumentationPage/: DocumentationPage.tsx
frontend/app/components/HomePage/: AppIcon.tsx  AppIcons.tsx  BannerShape.tsx  HomePage.tsx  Product.tsx  Products.tsx  SearchBar.tsx
frontend/app/components/MapPage/: MapPage.tsx
frontend/app/components/ShopPage/: CartItem.tsx  ShopPage.tsx
frontend/app/components/UserPage/: UserPage.tsx
src/: api_docs.rs  handlers.rs  main.rs
src/config/: mod.rs
src/controllers/: mod.rs  order_controller.rs  product_controller.rs
src/db/: mongo_client.rs
src/models/: mod.rs  order.rs  product.rs  res.rs
src/routes/: mod.rs  order.rs  product.rs
src/services/: order_service.rs  product.rs  product_service.rs
