[package]
name = "bike-shoppping-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
actix-web = "4.11.0"
uuid = { version = "1.18.0", features = ["v4"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
mongodb = "3.3.0"
ts-rs = "11.0.1"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = [
    "actix-web",
    "debug-embed",
] }
futures-util = "0.3"
bson = { version = "2.9", features = ["uuid-1"] }
anyhow = "1.0"
