[package]
name = "bike-shopping-backend"
version = "0.1.0"
edition = "2021"               # ⚠️ 2024 edition не існує! Використовуй 2021

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
actix-web = "4.11.0"
uuid = { version = "1.18.0", features = ["v4"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
mongodb = "3.3.0"
ts-rs = "11.1.0"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = [
    "actix-web",
    "debug-embed",
] }
futures-util = "0.3"
bson = { version = "2.9", features = ["uuid-1"] }
anyhow = "1.0"
actix-cors = "0.7"
validator = { version = "0.20.0", features = ["derive"] }
actix-governor = "0.10.0"
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"

[dev-dependencies]
# Testing framework
actix-web = { version = "4.11.0", features = ["macros"] }
actix-rt = "2"
actix-http = "3"
tokio = { version = "1.48.0", features = ["full", "test-util"] }
tokio-test = "0.4"

# Assertions
assert-json-diff = "2.0"
pretty_assertions = "1.4"

# Mocking
mockall = "0.13"
wiremock = "0.6"

# Database testing
testcontainers = "0.25.2"

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Test data generation
fake = { version = "4.4.0", features = ["derive", "chrono", "uuid"] }
rand = "0.9.2"

# Utilities
once_cell = "1.19"
serial_test = "3.2"
rstest = "0.26.1"

[profile.test]
opt-level = 1 # Швидша компіляція тестів

[profile.dev]
opt-level = 0 # Швидша компіляція під час розробки

[profile.release]
opt-level = 3     # Максимальна оптимізація для production
lto = true
codegen-units = 1
